@@ -2,6 +2,6 @@ package ru.otus.hw.domain;
 
 public record Student(String firstName, String lastName) {
     public String getFullName() {
-        return String.format("%s %s", firstName, lastName);
+        return "%s %s".formatted(firstName, lastName);
     }
 }
